@@ -18,6 +18,7 @@ Bug fixes:
 - #7097 The title "Enterprise" disappeares after clicking on "Preferences"
 - #7108 Wrong characters on client for unicode
 - #7114 Fixed problem with reading languages on Linux system
+- #7115 Prevent notifications if language reading fails
 
 Enhancements:
 - #7068 Add Synergy restart when settings changed
